--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,10 +49,13 @@ android {
     defaultConfig {
         applicationId "com.xcnav"
         minSdkVersion 29
-        targetSdkVersion 31
+        targetSdkVersion 33
         compileSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        testInstrumentationRunner "pl.leancode.patrol.PatrolJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: "true"
     }
 
     signingConfigs {
@@ -68,6 +71,11 @@ android {
             signingConfig signingConfigs.release
         }
     }
+
+    testOptions {
+        execution "ANDROIDX_TEST_ORCHESTRATOR"
+    }
+
 }
 
 flutter {
@@ -76,4 +84,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    androidTestUtil "androidx.test:orchestrator:1.4.2"
 }
