--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   screenshot: ^2.0.0
   fl_chart: ^0.63.0
-  datadog_flutter_plugin: ^1.3.2
+  datadog_flutter_plugin: 1.4.0
   flutter_native_splash: ^2.2.18
   flutter_map_tile_caching: ^8.0.1
 
