--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.6.4+104
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.2.0 <4.0.0"
+  flutter: ">=3.16.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -52,7 +53,7 @@ dependencies:
   path_provider: ^2.0.9
   flutter_svg: ^1.0.3
   geolocator: ^10.0.1
-  flutter_local_notifications: ^15.1.1
+  flutter_local_notifications: ^16.2.0
   focus_detector: ^2.0.1
   file_picker: ^5.2.2
   xml: ^6.1.0
@@ -78,10 +79,14 @@ dependencies:
   flutter_map_dragmarker: any
   flutter_colorpicker: ^1.0.3
   screenshot: ^2.0.0
-  fl_chart: ^0.63.0
+  fl_chart: ^0.65.0
   datadog_flutter_plugin: ^2.1.0
   flutter_native_splash: ^2.2.18
   flutter_map_tile_caching: ^8.0.1
+  # flutter_map_tile_caching:
+  #   git:
+  #     url: git@github.com:JaffaKetchup/flutter_map_tile_caching.git
+  #     ref: v8.1.0
   clock: ^1.1.1
 
 
@@ -95,8 +100,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
-  patrol: ^2.2.4
+  flutter_lints: ^3.0.1
+  patrol: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
