--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   flutter_map_tile_caching: ^8.0.1
   clock: ^1.1.1
   patrol_finders: ^2.0.2
+  flutter_blue_plus: ^1.31.7
 
 
 dev_dependencies:
