--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.6.4+104
+version: 2.6.5+105
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -83,6 +83,7 @@ dependencies:
   flutter_native_splash: ^2.2.18
   flutter_map_tile_caching: ^8.0.1
   clock: ^1.1.1
+  patrol_finders: ^2.0.2
 
 
 dev_dependencies:
@@ -96,7 +97,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.1
-  patrol: ^2.2.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
