--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.6.5+105
+version: 2.6.6+106
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -84,6 +84,7 @@ dependencies:
   flutter_map_tile_caching: ^8.0.1
   clock: ^1.1.1
   patrol_finders: ^2.0.2
+  flutter_blue_plus: ^1.31.7
 
 
 dev_dependencies:
@@ -96,7 +97,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
+  patrol: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
