--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,11 @@ dependencies:
   intl: any
   
   flutter_map: ^6.1.0
-  flutter_map_tile_caching:
-    git:
-      url: git@github.com:JaffaKetchup/flutter_map_tile_caching.git
-      ref: v8.1.0
+  flutter_map_tile_caching: ^9.0.0
   flutter_map_tappable_polyline:
     git:
       url: git@github.com:eidolonFIRE/flutter_map_tappable_polyline.git
+
   flutter_map_line_editor: ^6.0.0
 
   shared_preferences: ^2.0.13
@@ -54,25 +52,25 @@ dependencies:
   custom_image_crop: any
   qr_code_scanner: ^1.0.0
   qr_flutter: ^4.0.0
-  share_plus: ^7.2.2
-  web_socket_channel: ^2.1.0
+  share_plus: ^9.0.0
+  web_socket_channel: ^3.0.0
   flutter_image_compress: ^2.0.4
   path_provider: ^2.0.9
   flutter_svg: ^2.0.9
-  geolocator: ^11.0.0
-  flutter_local_notifications: ^16.2.0
+  geolocator: ^12.0.0
+  flutter_local_notifications: ^17.1.2
   focus_detector: ^2.0.1
-  file_picker: ^6.1.1
+  file_picker: ^8.0.3
   xml: ^6.1.0
   permission_handler: ^11.0.0
-  flutter_tts: ^3.6.3
+  flutter_tts: ^4.0.2
   flutter_barometer:
     git:
       url: git@github.com:eidolonFIRE/flutter_barometer.git
   wakelock_plus: ^1.1.4
-  package_info_plus: ^4.2.0
+  package_info_plus: ^8.0.0
   flutter_slidable: ^3.0.0
-  network_info_plus: ^4.1.0+1
+  network_info_plus: ^5.0.3
   url_launcher: ^6.1.2
   crypto: ^3.0.2
   usb_serial: ^0.5.1
@@ -86,7 +84,7 @@ dependencies:
   flutter_map_dragmarker: any
   flutter_colorpicker: ^1.0.3
   screenshot: ^2.0.0
-  fl_chart: ^0.66.2
+  fl_chart: ^0.68.0
   datadog_flutter_plugin: ^2.1.0
   flutter_native_splash: ^2.2.18
   clock: ^1.1.1
@@ -104,7 +102,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
   patrol_finders: any
 
 # For information on the generic Dart part of this file, see the
