--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: ^5.3.0
+  mocktail_image_network : any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
