--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,12 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
+    if target.name == "geolocator_apple"
+      target.build_configurations.each do |config|
+        config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', 'BYPASS_PERMISSION_LOCATION_ALWAYS=1']
+      end
+    end
+
     flutter_additional_ios_build_settings(target)
 
     target.build_configurations.each do |config|
