--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -40,6 +40,12 @@
 		</array>
 		<key>NSMotionUsageDescription</key>
 		<string>This app requires access to the barometer to provide altitude information.</string>
+		<key>NSBluetoothAlwaysUsageDescription</key>
+    	<string>This app needs Bluetooth to connect to servo carb.</string>
+		<key>UIBackgroundModes</key>
+		<array>
+			<string>bluetooth-central</string>
+		</array>
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
 		<key>UIMainStoryboardFile</key>
