--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: none # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.9.12+188
+version: 2.9.13+189
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -90,6 +90,7 @@ dependencies:
   syncfusion_flutter_sliders: ^28.2.6
   wheel_picker: ^0.2.1
   easy_localization: ^3.0.7+1
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
